--- a/Kesco.Lib.Localization.csproj
+++ b/Kesco.Lib.Localization.csproj
@@ -38,6 +38,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accessor.cs" />
+    <Compile Include="Accounting\ResContainer.Designer.cs" />
+    <Compile Include="Corporate\Areas\ResContainer.Designer.cs" />
+    <Compile Include="Corporate\ResContainer.Designer.cs">
+      <DependentUpon>ResContainer.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Dialing\ResContainer.Designer.cs" />
+    <Compile Include="Docs\Directions\ResContainer.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResContainer.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResContainer.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -46,6 +59,65 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Accounting\ResContainer.de.resx" />
+    <EmbeddedResource Include="Accounting\ResContainer.et.resx" />
+    <EmbeddedResource Include="Accounting\ResContainer.fr.resx" />
+    <EmbeddedResource Include="Accounting\ResContainer.it.resx" />
+    <EmbeddedResource Include="Accounting\ResContainer.resx" />
+    <EmbeddedResource Include="Accounting\ResContainer.ru.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.de.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.et.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.fr.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.it.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.resx" />
+    <EmbeddedResource Include="Corporate\Areas\ResContainer.ru.resx" />
+    <EmbeddedResource Include="Corporate\ResContainer.de.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Corporate\ResContainer.et.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Corporate\ResContainer.fr.resx" />
+    <EmbeddedResource Include="Corporate\ResContainer.it.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Corporate\ResContainer.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResContainer.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Corporate\ResContainer.ru.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialing\ResContainer.de.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialing\ResContainer.et.resx" />
+    <EmbeddedResource Include="Dialing\ResContainer.fr.resx" />
+    <EmbeddedResource Include="Dialing\ResContainer.it.resx" />
+    <EmbeddedResource Include="Dialing\ResContainer.resx" />
+    <EmbeddedResource Include="Dialing\ResContainer.ru.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.de.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.et.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.fr.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.it.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResContainer.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docs\Directions\ResContainer.ru.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ResContainer.de.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -73,6 +145,7 @@
       <Name>Kesco.Lib.Log</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
